--- a/package.json
+++ b/package.json
@@ -68,12 +68,22 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "lint": "eslint src --ext ts"
+    "lint": "eslint src --ext ts && biome check .",
+    "format": "biome format --write .",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,js,mjs,json}": [
+      "biome format --write --no-errors-on-unmatched"
+    ]
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.6",
     "@types/node": "24.7.2",
     "@types/vscode": "^1.75.0",
     "eslint": "9.37.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.4",
     "typescript": "5.9.3",
     "typescript-eslint": "^8.46.0"
   }
