feat: use built-in page down

--- a/package.json
+++ b/package.json
@@ -33,22 +33,12 @@
       },
       {
         "key": "ctrl+d",
-        "command": "extension.simpleVim.scrollDownHalfPage",
+        "command": "cursorPageDown",
         "when": "editorTextFocus && !extension.simpleVim.insertMode"
       },
       {
         "key": "ctrl+u",
-        "command": "extension.simpleVim.scrollUpHalfPage",
-        "when": "editorTextFocus && !extension.simpleVim.insertMode"
-      },
-      {
-        "key": "ctrl+f",
-        "command": "extension.simpleVim.scrollDownPage",
-        "when": "editorTextFocus && !extension.simpleVim.insertMode"
-      },
-      {
-        "key": "ctrl+b",
-        "command": "extension.simpleVim.scrollUpPage",
+        "command": "cursorPageUp",
         "when": "editorTextFocus && !extension.simpleVim.insertMode"
       }
     ],
