--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "runtimeExecutable": "${execPath}",
             "args": ["--extensionDevelopmentPath=${workspaceRoot}" ],
             "outFiles": [ "${workspaceRoot}/out/**/*.js" ],
-            "preLaunchTask": "tsc: watch - tsconfig.json",
+            "preLaunchTask": "npm: compile",
         },
     ],
 }
