feat: rename to simple-vim

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "keybindings": [
       {
         "key": "Escape",
-        "command": "extension.simpleVim.escapeKey",
+        "command": "simple-vim.escapeKey",
         "when": "editorTextFocus"
       },
       {
