feat: support custom keybindings

--- a/package.json
+++ b/package.json
@@ -65,6 +65,49 @@
           "type": "string",
           "default": "#F8F3AB",
           "description": "Background color that flashes to show the range when yanking."
+        },
+        "simple-vim.customBindings": {
+          "type": "array",
+          "default": [],
+          "description": "Custom key bindings that execute VSCode commands.",
+          "items": {
+            "type": "object",
+            "required": ["keys", "commands"],
+            "properties": {
+              "keys": {
+                "type": "array",
+                "description": "Key sequence to trigger the commands (e.g., [\"g\", \"d\"]).",
+                "items": {
+                  "type": "string"
+                }
+              },
+              "modes": {
+                "type": "array",
+                "description": "Vim modes where this binding is active. If not specified, applies to all modes.",
+                "items": {
+                  "type": "string",
+                  "enum": ["normal", "visual", "visualLine", "insert"]
+                }
+              },
+              "commands": {
+                "type": "array",
+                "description": "Array of VSCode commands to execute sequentially.",
+                "items": {
+                  "type": "object",
+                  "required": ["command"],
+                  "properties": {
+                    "command": {
+                      "type": "string",
+                      "description": "VSCode command to execute (e.g., \"editor.action.revealDefinition\")."
+                    },
+                    "args": {
+                      "description": "Optional arguments to pass to the command."
+                    }
+                  }
+                }
+              }
+            }
+          }
         }
       }
     }
