--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "@biomejs/biome": "^2.2.6",
     "@types/node": "24.7.2",
     "@types/vscode": "^1.75.0",
+    "@vscode/vsce": "^3.6.2",
     "eslint": "9.37.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.4",
