--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,15 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "editor.formatOnSave": true,
   "[javascript]": {
+    "editor.rulers": [120],
     "editor.defaultFormatter": "biomejs.biome"
   },
   "[typescript]": {
+    "editor.rulers": [120],
     "editor.defaultFormatter": "biomejs.biome"
   },
   "[json]": {
+    "editor.rulers": [120],
     "editor.defaultFormatter": "biomejs.biome"
   }
 }
