--- a/package.json
+++ b/package.json
@@ -180,5 +180,8 @@
     "lint-staged": "^16.2.4",
     "typescript": "5.9.3",
     "typescript-eslint": "^8.46.0"
+  },
+  "dependencies": {
+    "jsonc-parser": "^3.3.1"
   }
 }
