--- a/package.json
+++ b/package.json
@@ -189,11 +189,11 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "lint": "eslint src --ext ts && biome check .",
-    "format": "biome format --write .",
+    "format": "eslint src --ext ts --fix && biome check --write",
     "prepare": "husky",
     "package": "vsce package",
     "pretest": "npm run compile && npm run lint",
-    "test": "vscode-test"
+    "test": "npm run pretest && vscode-test"
   },
   "lint-staged": {
     "*.{ts,js,mjs,json}": [
