--- a/package.json
+++ b/package.json
@@ -289,6 +289,7 @@
     "typescript-eslint": "^8.46.0"
   },
   "dependencies": {
+    "await-semaphore": "^0.1.3",
     "jsonc-parser": "^3.3.1",
     "zod": "^4.1.12"
   }
