feat: add onCommand:type activation event

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "Keymaps"
   ],
   "activationEvents": [
-    "onStartupFinished"
+    "onStartupFinished",
+    "onCommand:type"
   ],
   "main": "./out/extension",
   "contributes": {
