--- a/biome.json
+++ b/biome.json
@@ -1,12 +1,7 @@
 {
     "$schema": "https://biomejs.dev/schemas/2.2.6/schema.json",
-    "vcs": {
-        "enabled": true,
-        "clientKind": "git",
-        "useIgnoreFile": true
-    },
     "files": {
-        "includes": ["src/**/*.ts", "*.ts", "*.js", "*.mjs"]
+        "includes": ["*.json", "src/**/*.ts", "*.ts", "*.js", "*.mjs"]
     },
     "formatter": {
         "enabled": true,
@@ -14,17 +9,22 @@
         "indentWidth": 4,
         "lineWidth": 120
     },
-    "linter": {
-        "enabled": true,
-        "rules": {
-            "recommended": true
-        }
-    },
     "javascript": {
         "formatter": {
             "quoteStyle": "single",
             "semicolons": "always",
             "trailingCommas": "all"
         }
+    },
+    "linter": {
+        "enabled": true,
+        "rules": {
+            "recommended": true
+        }
+    },
+    "vcs": {
+        "clientKind": "git",
+        "enabled": true,
+        "useIgnoreFile": true
     }
 }
