--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
         "module": "commonjs",
         "target": "ES2022",
         "outDir": "out",
-        "lib": [
-            "ES2022"
-        ],
+        "lib": ["ES2022"],
         "sourceMap": true,
         "rootDir": "src",
         "moduleResolution": "node",
@@ -18,8 +16,5 @@
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true
     },
-    "exclude": [
-        "node_modules",
-        ".vscode-test"
-    ]
+    "exclude": ["node_modules", ".vscode-test"]
 }
